Consider review comments
Signed-off-by: Laurent Garnier <lg.hc@free.fr>